--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="Description" content="Infinite ASCII diagrams, save to Google Drive, resize, freeform draw, and export straight to text/html.">
+<meta name="Description" content="Infinite ASCII diagrams, resize, freeform draw, and export straight to text/html.">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="mobile-web-app-capable" content="yes" />
@@ -498,7 +498,6 @@ textarea {
 </div>
 
 <div id="file-tools">
-  <div id="drive-save-state">Unsaved</div>
   <button id="export-button" class="tool export-image" title="Export"></button>
   <button id="import-button" class="tool import-image" title="Import"></button>
   <button id="clear-button" class="tool clear-image" title="Clear"></button>
